--- a/onama.html
+++ b/onama.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="prevoz robe, kamionski prevoz, selidba u beogradu, selidbe transport beograd, prevoz selidbe beograd, selidbe i prevoz, kamion prevoz, selidbe prevoz,/>
+    <meta name="title" content="Prevoz robe" />
+    <meta name="copyright" content="Stefan Tomić" />
+    <meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
