--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <header>
     <div class="nav">
-        <a href="index.html">Početna</a>
+        <a href="index.html" alt="prevoz robe, kamionski prevoz>Prevoz robe</a>
         <a href="onama.html">O nama</a>
         <a href="kontakt.html">Kontakt</a>
         <a href="nastim.html">Naš tim</a>
     </div>
     <div class="celina">
-    <h1>Prevoz robe kamionom</h1>
+    <h1 alt="selidbe i prevoz">Kamionski prevoz</h1>
 </header>
 <main>
-    <div class="tekst">
-    <p>Agencija za prevoz robe i stvari, selidbe,putnički taksi prevoz,
-          višegodišnje iskustvo u prevozu robe i taksi prevozu putnika.
+    <div class="tekst" alt="selidbe i prevoz, transport Beograd">
+    <p>Agencija za prevoz robe, selidbe u Beogradu, kamionski prevoz,
+          višegodišnje iskustvo u prevozu robe i selidba u Beogradu.
            Pouzdan partner za svaku vrstu prevoza.</p>
            <p>Cena kamionski prevoz i prevoz šleperom je takođe određena u zavisnosti
             da li je u pitanju lokalna vožnja u Beogradu ili je potreban kamionski 
@@ -37,13 +37,13 @@
         </p>
     </div>
     </div>
-    <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme">
+    <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme" alt="kamion prevoz">
 </main>
  <footer>   
-    <div class="cena">
+    <div class="cena" alt="">
     <p class=cena1> Cena kamionski prevoz Beograd:</p>     
-    <p>Kamionski prevoz Beograd: 5.000,00 – 8.000,00 rsd</p>
-    <p>Prevoz šleper: 11.000,00 – 15.000,00 rsd</p>
+    <p alt="kamionski prevoz">Kamionski prevoz,Beograd: 5.000,00 – 8.000,00 rsd</p>
+    <p alt="prevoz robe">Prevoz robe: 11.000,00 - 15.ooo,oo rsd </p>
     </div>
     </footer>
 </body>
