--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
     <div class="nav">
-        <a href="index.html" alt="prevoz robe, kamionski prevoz">Prevoz robe</a>
+        <a href="index.html" alt="prevoz robe kamionski prevoz">Početna</a>
         <a href="onama.html">O nama</a>
         <a href="kontakt.html">Kontakt</a>
         <a href="nastim.html">Naš tim</a>
