--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Stefan Tomić" />
     <meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Kontakt</title>
 </head>
 <body>
     <div class="nav">
