--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="copyright" content="Stefan Tomić" />
     <meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="
     <title>Prevoz-robe</title>
 </head>
 <body>
