--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
     </div>
     <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme" alt="kamion prevoz">
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v15.0" nonce="1sr3CH2M"></script>
+<div class="fb-share-button" data-href="https://stifler001.github.io/projekatsajt/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstifler001.github.io%2Fprojekatsajt%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Подели</a></div>                                                                                          
 </main>
  <footer>   
     <div class="cena" alt="">
