--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme" alt="kamion prevoz">
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v15.0" nonce="1sr3CH2M"></script>
-<div class="fb-share-button" data-href="https://stifler001.github.io/projekatsajt/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstifler001.github.io%2Fprojekatsajt%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Подели</a></div>                                                                                          
+<div class="fb-share-button" data-href="https://stifler001.github.io/projekatsajt/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstifler001.github.io%2Fprojekatsajt%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Подели</a></div>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v15.0" nonce="Ferga3xk"></script>
+ <div class="fb-like" data-href="https://stifler001.github.io/projekatsajt/" data-width="" data-layout="button" data-action="like" data-size="small" data-share="false"></div>                                                                                     
 </main>
  <footer>   
     <div class="cena" alt="">
