--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="prevoz robe, kamionski prevoz, selidba u beogradu, selidbe transport beograd, prevoz selidbe beograd, selidbe i prevoz, kamion prevoz, selidbe prevoz,/>
-    <meta name="title" content="Prevoz robe" />
-    <meta name="copyright" content="Stefan Tomić" />
-    <meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
-    <meta property="og:url" content="https://stifler001.github.io/projekatsajt/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Prevoz robe" />
-    <meta property="og:description" content="Sajt koji vam predlaze najbolje rešenje za prevoz stvari" />
-    <meta property="og:image" content="img/kamion.jpg" />  
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico" />
+    //<meta name="keywords" content="prevoz robe, kamionski prevoz, selidba u beogradu, selidbe transport beograd, prevoz selidbe beograd, selidbe i prevoz, kamion prevoz, selidbe prevoz,/>
+    //<meta name="title" content="Prevoz robe" />
+    //<meta name="copyright" content="Stefan Tomić" />
+    //<meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
+    //<meta property="og:url" content="https://stifler001.github.io/projekatsajt/" />
+    //<meta property="og:type" content="website" />
+    //<meta property="og:title" content="Prevoz robe" />
+    //<meta property="og:description" content="Sajt koji vam predlaze najbolje rešenje za prevoz stvari" />
+    //<meta property="og:image" content="img/kamion.jpg" />  
+    //<link rel="stylesheet" href="css/style.css">
+    //<link rel="icon" href="favicon.ico" />
     <title>Prevoz-robe</title>
 </head>
 <body>
