--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    //<meta name="keywords" content="prevoz robe, kamionski prevoz, selidba u beogradu, selidbe transport beograd, prevoz selidbe beograd, selidbe i prevoz, kamion prevoz, selidbe prevoz,/>
-    //<meta name="title" content="Prevoz robe" />
-    //<meta name="copyright" content="Stefan Tomić" />
-    //<meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
-    //<meta property="og:url" content="https://stifler001.github.io/projekatsajt/" />
-    //<meta property="og:type" content="website" />
-    //<meta property="og:title" content="Prevoz robe" />
-    //<meta property="og:description" content="Sajt koji vam predlaze najbolje rešenje za prevoz stvari" />
-    //<meta property="og:image" content="img/kamion.jpg" />  
-    //<link rel="stylesheet" href="css/style.css">
-    //<link rel="icon" href="favicon.ico" />
+    <meta name="keywords" content="prevoz robe, kamionski prevoz, selidba u beogradu, selidbe transport beograd, prevoz selidbe beograd, selidbe i prevoz, kamion prevoz, selidbe prevoz,/>
+    <meta name="title" content="Prevoz robe" />
+    <meta name="copyright" content="Stefan Tomić" />
+    <meta name="description" content="Prevoz-robe jeftino i brzo.Sve vrste selidba, transporta." />
+    <meta property="og:url" content="https://stifler001.github.io/projekatsajt/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Prevoz robe" />
+    <meta property="og:description" content="Sajt koji vam predlaze najbolje rešenje za prevoz stvari" />
+    <meta property="og:image" content="img/kamion.jpg" />  
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" />
     <title>Prevoz-robe</title>
 </head>
 <body>
@@ -28,36 +28,7 @@
     <div class="celina">
     <h1 alt="selidbe i prevoz">Kamionski prevoz</h1>
 </header>
-<main>
-    <div class="tekst" alt="selidbe i prevoz, transport Beograd">
-    <p>Agencija za prevoz robe, selidbe u Beogradu, kamionski prevoz,
-          višegodišnje iskustvo u prevozu robe i selidba u Beogradu.
-           Pouzdan partner za svaku vrstu prevoza.</p>
-           <p>Cena kamionski prevoz i prevoz šleperom je takođe određena u zavisnosti
-            da li je u pitanju lokalna vožnja u Beogradu ili je potreban kamionski 
-            prevoz u Srbiji i inostranstvu. Sve cene su informativne i podložne dogovoru
-             prema specifičnosti zahtevanog prevoza.
-           Za stalne i povremene klijente nudimo posebne pogodnosti bez obzira da li
-            su u pitanju fizička ili pravna lica. Plaćanje je u gotovom novcu ili preko 
-            računa prema želji klijenta.
-        </p>
-    </div>
-    </div>
-    <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme" alt="kamion prevoz">
-    <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v15.0" nonce="1sr3CH2M"></script>
-<div class="fb-share-button" data-href="https://stifler001.github.io/projekatsajt/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstifler001.github.io%2Fprojekatsajt%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Подели</a></div>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v15.0" nonce="Ferga3xk"></script>
- <div class="fb-like" data-href="https://stifler001.github.io/projekatsajt/" data-width="" data-layout="button" data-action="like" data-size="small" data-share="false"></div>                                                                                     
-</main>
- <footer>   
-    <div class="cena" alt="">
-    <p class=cena1> Cena kamionski prevoz Beograd:</p>     
-    <p alt="kamionski prevoz">Kamionski prevoz,Beograd: 5.000,00 – 8.000,00 rsd</p>
-    <p alt="prevoz robe">Prevoz robe: 11.000,00 - 15.ooo,oo rsd </p>
-    </div>
-    </footer>
+
 </body>
 </html>
     
