--- a/index.html
+++ b/index.html
@@ -28,7 +28,30 @@
     <div class="celina">
     <h1 alt="selidbe i prevoz">Kamionski prevoz</h1>
 </header>
-
+    <main>
+    <div class="tekst">
+    <p>Agencija za prevoz robe i stvari, selidbe,putnički taksi prevoz,
+          višegodišnje iskustvo u prevozu robe i taksi prevozu putnika.
+           Pouzdan partner za svaku vrstu prevoza.</p>
+           <p>Cena kamionski prevoz i prevoz šleperom je takođe određena u zavisnosti
+            da li je u pitanju lokalna vožnja u Beogradu ili je potreban kamionski 
+            prevoz u Srbiji i inostranstvu. Sve cene su informativne i podložne dogovoru
+             prema specifičnosti zahtevanog prevoza.
+           Za stalne i povremene klijente nudimo posebne pogodnosti bez obzira da li
+            su u pitanju fizička ili pravna lica. Plaćanje je u gotovom novcu ili preko 
+            računa prema želji klijenta.
+        </p>
+    </div>
+    </div>
+    <img class="slika"src="img/man_tgx_241120.jpg"title="Primer izgleda kamiona naše firme">
+</main>
+ <footer>   
+    <div class="cena">
+    <p class=cena1> Cena kamionski prevoz Beograd:</p>     
+    <p>Kamionski prevoz Beograd: 5.000,00 – 8.000,00 rsd</p>
+    <p>Prevoz šleper: 11.000,00 – 15.000,00 rsd</p>
+    </div>
+    </footer>
 </body>
 </html>
     
